# mce-lib-aws

./: .gitignore  .travis.yml  README.md  setup.cfg  setup.py
contrib/: README.md
contrib/python/: populate_localstack.py
contrib/serverless/: README.md  handler.py  localstack_endpoints.json  package.json  requirements.txt  serverless.yml
contrib/terraform/: README.md  aws.provider.tf  main.tf  output.tf  variables.tf
contrib/terraform/ssh-keys/: id_rsa_aws  id_rsa_aws.pub
mce_lib_aws/: USAGE.md  __init__.py  cli.py  common.py  crawler.py  utils.py
mce_lib_aws/pytest/: fixtures.py  plugin.py
mce_lib_aws/services/: acm.py  apigateway.py  autoscaling.py  cloudformation.py  cloudfront.py  cloudsearch.py  dynamodb.py  ec2.py  ecs.py  efs.py  elasticache.py  elasticbeanstalk.py  elb.py  elbv2.py  es.py  lambda_.py  opsworks.py  rds.py  redshift.py  s3.py  sns.py  sqs.py
tests/: conftest.py  test_cli.py  test_crawler.py  test_utils.py
tests/services/: test_acm.py  test_apigateway.py  test_autoscaling.py  test_cloudformation.py  test_cloudfront.py  test_cloudsearch.py  test_dynamodb.py  test_ec2.py  test_ecs.py  test_efs.py  test_elasticache.py  test_elasticbeanstalk.py  test_elb.py  test_elbv2.py  test_es.py  test_lambda.py  test_opsworks.py  test_rds.py  test_redshift.py  test_s3.py  test_sns.py  test_sqs.py
